# starter-rust-webuivanilla-rsbuild

./: .env.example  .gitignore  Cargo.toml  README.md  app.config.toml  app.db  build-dist.sh  build-frontend.js  build.rs  post-build.sh  run.sh
docs/: 01-project-summary.md  02-structure-overview.md  03-build-runtime.md  04-structural-debt.md  05-recommended-structure.md  06-potential-improvements.md  07-migration-order.md  08-development-commands.md
frontend/: index.html  package.json  rsbuild.config.dev.ts  rsbuild.config.inline.ts  rsbuild.config.ts  rspack.config.dev.ts  rspack.config.inline.ts  rspack.config.ts  tsconfig.json
frontend-origin/: biome.json  index.html  package-lock.json  package.json  rsbuild.config.dev.ts  rsbuild.config.ts  tsconfig.json
frontend-origin/src/: di.js  main.ts  services.js
frontend-origin/src/use-cases/: App.vue
frontend/src/: App.ts  main.ts
frontend/src/app/: backend-bridge.ts  index.ts  types.ts
frontend/src/core/: index.ts  result.ts
frontend/src/lib/: console.ts  error-modal.ts  event-bus.ts  events.ts  index.ts  logger.ts  security.ts
frontend/src/mvvm/: index.ts
frontend/src/plugins/: index.ts
frontend/src/types/: winbox.d.ts
src/: main.rs
src/application/: mod.rs
src/application/commands/: mod.rs  (+2 more)
src/core/: mod.rs  result.rs
src/di/: container.rs  mod.rs
src/features/: mod.rs
src/infrastructure/: mod.rs
src/model/: mod.rs
src/mvvm/: mod.rs
src/platform/: filesystem.rs  mod.rs  process.rs
src/plugins/: mod.rs  plugin_trait.rs  registry.rs
src/view/: mod.rs
src/viewmodel/: mod.rs
(+88 files in other folders)
